--- a/docs/assets/styles/extra.css
+++ b/docs/assets/styles/extra.css
@@ -12,3 +12,10 @@
     font-size: 0.75rem;
     font-weight: bold;
 }
+
+/* Center images when used with the `.center` class */
+.md-typeset img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
